# Wingspan

./: .gitignore  .gitmodules  Cargo.toml  GUIDE.md  HACKING.md  README.md  bors.toml  rand.sh  rustfmt.toml
.cargo/: config.toml
.github/actions/: build.yml
.github/workflows/: build.yml
assets/: long_log.txt
ropey/: Cargo.toml
src/: main.rs
textarea/: Cargo.toml
textarea/examples/: basic.rs
textarea/src/: lib.rs  paint.rs
textedit/: Cargo.toml
textedit/src/: lib.rs
wingspan/: Cargo.toml
wingspan-buffer/: Cargo.toml
wingspan-buffer/src/: lib.rs
wingspan/examples/: layout.rs  log_analisis.rs
wingspan/src/: main.rs  paint.rs  widget.rs
wingspan/texts/: macbeth.txt  sonnet18.txt
