[package]
name = "textarea"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

textedit = {path = "../textedit"}
color-eyre = "0.5"

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev="8600e42"
#branch = "public-test-hack"

[dependencies.ropey]
git = "https://github.com/aDotInTheVoid/ropey/"
rev =  "653048c"

