[package]
name = "textarea"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

textedit = {path = "../textedit"}
ropey = { path = "../ropey" }
druid = { path = "../druid" }
color-eyre = "0.5"
