[package]
name = "textedit"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.6.0", optional = true}
[dependencies.ropey]
git = "https://github.com/aDotInTheVoid/ropey/"
rev =  "653048c"





