[package]
name = "textedit"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = { path = "../ropey" }

[dependencies.druid]
# TODO: Allow for usage without druid
git = "https://github.com/linebender/druid"
rev="8600e42"
