[package]
name = "wingspan-buffer"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = { git = "https://github.com/aDotInTheVoid/ropey/", branch = "druid-0.7" }
druid = "0.7"

